--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -49,12 +56,12 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.0.2</version>
 					<configuration>
-					<archive>
-						<manifest>
-							<mainClass>io.zino.mystore.MyStore</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
+						<archive>
+							<manifest>
+								<mainClass>io.zino.mystore.MyStore</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
