TestClient modified & SimpleClient addde & upgrade and downgrade in memory-hirar logic implemented

--- a/src/main/java/io/zino/mystore/config
+++ b/src/main/java/io/zino/mystore/config
@@ -1,5 +1,7 @@
 MemoryStorageEngine.size=10
 
+FileStorageEngine.upgradeAgingThreshold=0.001
+
 NetworkEngine.port=12341
 NetworkRequestHandlerEngine.size=2
 
