--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -32,6 +32,12 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+  			<groupId>org.evosuite</groupId>
+  			<artifactId>evosuite-standalone-runtime</artifactId>
+  			<version>1.0.6</version>
+  			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -74,6 +80,32 @@
 				<plugin>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
+				</plugin>
+				<plugin>
+      				<groupId>org.evosuite.plugins</groupId>
+      				<artifactId>evosuite-maven-plugin</artifactId>
+      				<version>1.0.6</version>
+      				<executions>
+      					<execution>
+         					<goals> 
+         						<goal> prepare </goal>
+         					</goals>
+         					<phase> process-test-classes </phase>
+      					</execution>
+      				</executions>
+  				</plugin>
+  				<plugin>
+   					<groupId>org.apache.maven.plugins</groupId>
+   					<artifactId>maven-surefire-plugin</artifactId>
+   					<version>2.17</version>
+   					<configuration>
+     					<properties>
+       						<property>
+          						<name>listener</name>
+          						<value>org.evosuite.runtime.InitializingListener</value>
+      						</property>
+     					</properties>
+  					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
