--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
 			<version>2.11.0</version>
 		</dependency>
 		<dependency>
-  			<groupId>org.evosuite</groupId>
-  			<artifactId>evosuite-standalone-runtime</artifactId>
-  			<version>1.0.6</version>
-  			<scope>test</scope>
+			<groupId>org.evosuite</groupId>
+			<artifactId>evosuite-standalone-runtime</artifactId>
+			<version>1.0.6</version>
+			<scope>test</scope>
 		</dependency>
 
 
@@ -76,6 +76,19 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<configuration>
+						<archive>
+							<manifest>
+								<mainClass>io.zino.mystore.MyStore</mainClass>
+							</manifest>
+						</archive>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+				</plugin>
+				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.2</version>
 				</plugin>
@@ -84,30 +97,30 @@
 					<version>2.8.2</version>
 				</plugin>
 				<plugin>
-      				<groupId>org.evosuite.plugins</groupId>
-      				<artifactId>evosuite-maven-plugin</artifactId>
-      				<version>1.0.6</version>
-      				<executions>
-      					<execution>
-         					<goals> 
-         						<goal> prepare </goal>
-         					</goals>
-         					<phase> process-test-classes </phase>
-      					</execution>
-      				</executions>
-  				</plugin>
-  				<plugin>
-   					<groupId>org.apache.maven.plugins</groupId>
-   					<artifactId>maven-surefire-plugin</artifactId>
-   					<version>2.17</version>
-   					<configuration>
-     					<properties>
-       						<property>
-          						<name>listener</name>
-          						<value>org.evosuite.runtime.InitializingListener</value>
-      						</property>
-     					</properties>
-  					</configuration>
+					<groupId>org.evosuite.plugins</groupId>
+					<artifactId>evosuite-maven-plugin</artifactId>
+					<version>1.0.6</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal> prepare </goal>
+							</goals>
+							<phase> process-test-classes </phase>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.17</version>
+					<configuration>
+						<properties>
+							<property>
+								<name>listener</name>
+								<value>org.evosuite.runtime.InitializingListener</value>
+							</property>
+						</properties>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
