some todo chenged

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,8 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = error
+appender.console.filter.threshold.level = TRACE 
+#INFO error TRACE
 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
