--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,17 +1,39 @@
+status = error
+dest = err
+name = PropertiesConfig
+ 
+property.filename = log/rolling/rollingtest.log
+ 
+filter.threshold.type = ThresholdFilter
+filter.threshold.level = debug
+ 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.console.layout.pattern = %m%n
 appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = TRACE 
-#INFO error TRACE
+#appender.console.filter.threshold.level = error 
 
+ 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
-appender.rolling.fileName = log/application.log
-appender.rolling.filePattern = log/application-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.fileName = ${filename}
+appender.rolling.filePattern = log/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern =%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
 appender.rolling.policies.type = Policies
+appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval = 3600
+appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=10MB
+appender.rolling.policies.size.size=100MB
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.max = 5
+ 
+logger.rolling.name = io.zino.mystore
+logger.rolling.level = debug
+logger.rolling.additivity = false
+logger.rolling.appenderRef.rolling.ref = RollingFile
+ 
+rootLogger.level = info
+rootLogger.appenderRef.stdout.ref = STDOUT
